# delft3dfmpy

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  Release_notes.txt  __init__.py  environment.yml  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
converters/: hydamo_to_dflowfm.py  hydamo_to_dflowrr.py
core/: dfm.py  drr.py  geometry.py  mesh2d.py
data/: DEFAULT.BUI  DEFAULT.EVP  MGB_grid_original.nc  MGB_grid_refined.nc  exported_mesh.nc  gml.rar
data/gis/: 2D_extent.dbf  2D_extent.shp  2D_extent.shx  OLO_subcatchment.dbf  OLO_subcatchment.shp  OLO_subcatchment.shx  init_waterlevel_special.dbf  init_waterlevel_special.shp  init_waterlevel_special.shx  lijnelementen_4.pliz  selectie_pilot.dbf  selectie_pilot.shp  selectie_pilot.shx
data/gml/: NormGeparametriseerdProfiel.gfs  NormGeparametriseerdProfiel.gml  (+31 more)
datamodels/: common.py  cstructures.py  hydamo.py
delft3dfmpy/: __init__.py
examples/: test_osm.py
io/: UgridWriter.py  dflowfmwriter.py  dflowrrwriter.py  dfmreader.py  drrreader.py
notebooks/: Notebook GitHub.ipynb  Usage_introduction.ipynb  Usage_introduction_FM_only-antwoorden.ipynb  Usage_introduction_FM_only-oefeningen_zonder antwoorden.ipynb  Usage_introduction_FM_only.ipynb  Usage_introduction_FM_only_met_oefeningen.ipynb  Usage_introduction_RR-only.ipynb  Usage_introduction_RRFM.ipynb  Usage_introduction_RRFM_met_antwoorden.ipynb  Usage_introduction_RRFM_met_oefeningen.ipynb  Usage_introduction_RRFM_oefeningen.ipynb  Usage_introduction_RRFM_oefeningen_zonder_antwoorden.ipynb  Usage_introduction_coupled_RRFM.ipynb  Usage_introduction_coupled_RRFM.py
resources/: FMmdu.txt  template.ext
(+216 files in other folders)
