[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "delft3dfmpy"
author = "Deltares - HKV"
home-page = "https://github.com/openearth/delft3dfmpy"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.rst"
requires = [
    "geopandas",
    "rasterio",
    "imod",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pillow",
    "rasterstats",
    "tqdm",
    "netcdf4",
    "descartes", 
    "contextily",
    "hkvsobekpy"
]
keywords = "hydraulics hydrology data-science delft3dfm deltares hkv hydamo"
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
dev = [
    "pytest", 
    "pytest-cov", 
    "black",
    "twine",
    "bumpversion",
    "watchdog",
    "coverage",
    "Sphinx"
]
